Agrego: Referencias relativas a Storage-Class Memory

--- a/referencias/2.relacion_con_el_hardware.md
+++ b/referencias/2.relacion_con_el_hardware.md
@@ -12,3 +12,23 @@
   donde muestra que la _Ley de Moore_ únicamente "captura" a uno de
   muchos factores de crecimiento exponencial que afectan a nuestra
   área de especialización.
+- Respecto al diferencial de precio y velocidad en el desarrollo entre
+  discos y memoria, la aparición de la _memoria de clase de
+  almacenamiento_ (_storage class memory_) viene a romper nuestras
+  expectativas — y la forma en que se realiza el desarrollo de
+  software.
+  - Artículo de Siva Sivaram,
+    [Storage Class Memory: Can the Promise be Fulfilled?](https://itblog.sandisk.com/storage-class-memory-3d-nand-lessons/),
+    publicado en octubre de 2016 por SanDisk. Tomen en cuenta, claro,
+    que es "pseudo-publicidad", publicado por una marca líder en el
+    campo del almacenamiento en estado sólido.
+  - Keith Packard presentó la ponencia
+    [Delivering software for memory-driven computing](https://debconf17.debconf.org/talks/206/)
+    ([video disponible](https://gensho.ftp.acc.umu.se/pub/debian-meetings/2017/debconf17/delivering-software-for-memory-driven-co.vp8.webm))
+    en el congreso de desarrollo de Debian, DebConf17. Una exposición
+    muy clara e interesante del nuevo paradigma de programación de
+    software y del sistema mismo.
+  - De IBM Research,
+    [Storage Class Memory: Towards a disruptively low-cost solid-state non-volatile memory](http://nvmw.ucsd.edu/2010/documents/Burr_Geroffrey.pdf). Es
+    una presentación (PDF) únicamente, pero ilustra gráficamente muchos de
+    los puntos presentados también en la ponencia de Keith Packard.
