--- a/referencias/3.sistemas_de_archivos.md
+++ b/referencias/3.sistemas_de_archivos.md
@@ -31,6 +31,11 @@ para cada una de ellas por separado:
 
 ## Estructura en el dispositivo
 
-
+- Pueden encontrar un muy buen desglose de lo que significa cada campo
+  del superbloque, directorio y tabla FAT en
+  [File allocation table - 16 bit](http://www.beginningtoseethelight.org/fat16/index.htm)
+- El
+  [recurso que empleé](https://www.win.tue.nl/~aeb/linux/fs/fat/fat-1.html)
+  para el [programa ejemplo](https://sistop.org/codigo/vfatdump.py)
 
 ## El medio físico
