--- a/proyectos/1/calificacion.org
+++ b/proyectos/1/calificacion.org
@@ -177,35 +177,119 @@ El planteamiento del proyecto y la rúbrica para su calificación están
 
 - Directorio de entrega :: [[./SaldañaEdgar]]
 - Documentación :: [[./SaldañaEdgar/README.md]]
-- Estrategia de representación :: 
+- Estrategia de representación :: Serialización nativa Java de una
+     estructura de datos en memoria
 - Lenguaje de desarrollo :: Java
 - Observaciones ::
+  - Casi, casi, *casi* implementas esto a la perfección :-(
+    Implementas todas las estructuras necesarias, pero tendrías que
+    haber serializado /un/ objeto más, que contuviera los datos de
+    cada uno de los archivos
+    - Como está tu código, es vulnerable a que me "escape" de él y vea
+      archivos "reales" fuera de éste. Por ejemplo, partiendo desde
+      una primera invocación:
+      #+BEGIN_SRC text
+	$ java Sistema 
+	No se detectó el sistema de archivos SISTOP en este volumen, a continuación se montará
+
+	¡Bienvenido a SISTOP!
+	Escribe help para listar los comandos posibles
+
+	R>mkf Datos.java
+	R>ls
+	Datos.java     	archivo   	Thu Oct 12 11:30:26 CDT 2017	 344 bytes	RW  3
+	R>look Datos.java
+	/*Solo contiene una lista dinámica donde se guardan los objetos Directorio,
+	los archivos regulares no se guardan aquí, se guardan directamente en el volumen del sistema*/
+
+	import java.util.ArrayList;
+	import java.io.Serializable;
+
+	public class Datos implements Serializable{
+
+		ArrayList<Directorio> directorios = new ArrayList<Directorio>();
+      #+END_SRC
+    - Del mismo modo, puede utilizarse para corromperse a sí mismo de
+      muchas maneras. Esta resulta obvia:
+      #+BEGIN_SRC text
+	$ java Sistema 
+	Reconociendo la configuración del sistema existente
+
+	¡Bienvenido a SISTOP!
+	Escribe help para listar los comandos posibles
+
+	R>ls  
+	Datos.java     	archivo   	Thu Oct 12 11:30:26 CDT 2017	 344 bytes	RW  3
+	R>mkf Sistema.class
+	R>rem Sistema.class
+	R>exit
+      #+END_SRC
+
+  - Pero, al mismo tiempo, excedes parcialmente lo que pedí:
+    - Implementas directorios, e implementas un mapeo bastante
+      interesante en tu directorio, superbloque.
+    - Manejas permisos de lectura y escritura
+  - La implementación de directorios tiene buenas intenciones, pero se
+    rompe demasiado fácil:
+    #+BEGIN_SRC text
+      $ java Sistema 
+      No se detectó el sistema de archivos SISTOP en este volumen, a continuación se montará
+
+      ¡Bienvenido a SISTOP!
+      Escribe help para listar los comandos posibles
+
+      R>mkd uno
+      R>enter uno
+      R>uno>mkd dos
+      R>uno>enter dos
+      R>uno>dos>mkf datos
+      R>uno>dos>add datos
+      Escribe lo que agregarás al archivo: 
+      Aquí estoy
+      R>uno>dos>ls
+      R>uno>dos>back
+      R>uno>back
+      R>ls
+      uno            	directorio	Thu Oct 12 11:15:21 CDT 2017	   0 bytes	RW  10
+      dos            	directorio	Thu Oct 12 11:15:26 CDT 2017	   0 bytes	RW  1
+      datos          	archivo   	Thu Oct 12 11:15:34 CDT 2017	  11 bytes	RW  3
+      R>enter dos
+      R>dos>enter dos
+      R>dos>dos>enter uno
+      R>dos>dos>uno>enter uno
+      R>dos>dos>uno>uno>ls
+      R>dos>dos>uno>uno>look datos
+      Aquí estoy
+      R>dos>dos>uno>uno>
+    #+END_SRC
+    Pero, de vuelta, es un punto completamente opcional a
+    implementar.
 
 | *Rubro*                | *Parcial* | *Peso* | *Puntos* |
 |------------------------+-----------+--------+----------|
-| *Requisitos*           |           |    0.2 |       0. |
-| Cumplimiento           |           |        |     0.00 |
+| *Requisitos*           |           |    0.2 |      1.5 |
+| Cumplimiento           |       7.5 |        |     1.50 |
 |------------------------+-----------+--------+----------|
-| *Proyecto*             |           |    0.2 |       0. |
-| Complejidad            |           |        |     0.00 |
-| Claridad desarrollo    |           |        |     0.00 |
-| Interfaz usuario       |           |        |     0.00 |
+| *Proyecto*             |           |    0.2 |     2.01 |
+| Complejidad            |        10 |        |     0.67 |
+| Claridad desarrollo    |        10 |        |     0.67 |
+| Interfaz usuario       |        10 |        |     0.67 |
 |------------------------+-----------+--------+----------|
-| *Documentación*        |           |    0.2 |       0. |
-| Doc. externa           |           |        |     0.00 |
-| Entorno y dependencias |           |        |     0.00 |
-| Comentarios            |           |        |     0.00 |
+| *Documentación*        |           |    0.2 |     2.01 |
+| Doc. externa           |        10 |        |     0.67 |
+| Entorno y dependencias |        10 |        |     0.67 |
+| Comentarios            |        10 |        |     0.67 |
 |------------------------+-----------+--------+----------|
-| *Entrega*              |           |    0.2 |       0. |
-| Historia en Git        |           |        |     0.00 |
-| Dir. de proyecto       |           |        |     0.00 |
-| Código válido          |           |        |     0.00 |
+| *Entrega*              |           |    0.2 |     2.01 |
+| Historia en Git        |        10 |        |     0.67 |
+| Dir. de proyecto       |        10 |        |     0.67 |
+| Código válido          |        10 |        |     0.67 |
 |------------------------+-----------+--------+----------|
-| *Legibilidad*          |           |    0.2 |       0. |
-| Estructura             |           |        |     0.00 |
-| Nomenclatura           |           |        |     0.00 |
+| *Legibilidad*          |           |    0.2 |      1.5 |
+| Estructura             |        10 |        |     1.00 |
+| Nomenclatura           |       7.5 |        |     0.50 |
 |------------------------+-----------+--------+----------|
-| *TOTAL*                |           |        |       0. |
+| *TOTAL*                |           |        |     9.03 |
 |------------------------+-----------+--------+----------|
 #+TBLFM: @2$4=@3::@3$4=@3$2*@2$3 ; f-2::@4$4=@5+@6+@7::@5$4=$2*@4$3/3 ; f-2::@6$4=$2*@4$3/3 ; f-2::@7$4=$2*@4$3/3 ; f-2::@8$4=@9+@10+@11::@9$4=$2*@8$3/3 ; f-2::@10$4=$2*@8$3/3 ; f-2::@11$4=$2*@8$3/3 ; f-2::@12$4=@13+@14+@15::@13$4=$2*@12$3/3 ; f-2::@14$4=$2*@12$3/3 ; f-2::@15$4=$2*@12$3/3 ; f-2::@16$4=@17+@18::@17$4=$2*@16$3/2 ; f-2::@18$4=$2*@16$3/3 ; f-2::@19$4=@2+@4+@8+@12+@16
 
@@ -216,31 +300,138 @@ El planteamiento del proyecto y la rúbrica para su calificación están
 - Estrategia de representación :: 
 - Lenguaje de desarrollo :: C
 - Observaciones ::
+  - Resepcto al punto que mencionas en tu =leeme.txt= e =info.ric=:
+    Podrías usar lo siguiente en vez de un horroroso =system(clear);
+    no dependes de ejecutar programas externos, es más rápido y
+    confiable:
+    #+BEGIN_SRC C
+    printf("\e[2J\e[H");
+    #+END_SRC
+    Te dejo aquí la [[http://www.termsys.demon.co.uk/vtansi.htm][referencia a las /secuencias de escape/ de termnal
+    ANSI/VT100]], con las que puedes generar color, posicionar el cursor
+    en la pantalla y demás. Y claro, podrías incluir en tu encabezado
+    un /macro/ como el siguiente:
+    #+BEGIN_SRC C
+    #define clear() printf("\e[2J\e[H");
+    #+END_SRC
+    Con lo que bastaría con escribir =clear()= en tu código.
+  - Tu programa va guardando los varios archivos dentro de uno sólo,
+    lo cual cumple perfectamente con el espíritu del problema
+    planteado, pero cada vez que lo invocas crea incondicionalmente al
+    archivo — Pierde todos los datos que tenía.
+
+    Curiosamente, no le /falta/ nada de funcionalidad a tu programa:
+    Si ya existe el archivo =raiz= y comento las líneas 20-22 de tu
+    código:
+    #+BEGIN_SRC C
+    raiz = fopen("raiz","w");
+    fprintf(raiz, "Root del micro sistema\n");
+    fclose(raiz);
+    #+END_SRC
+    Puedo entrar de vuelta y mis datos están ahí:
+    #+BEGIN_SRC text
+
+      ,**************************************************
+      ,*-------mySys: myShell---------------------------*
+      ,*-------------------------------test ver 1.09----*
+      ,*-help: ayuda---info: acerca de-----quit: salir--*
+      ,**************************************************
+
+      myShell commad ->readf
+      args[name] >>cuac
+      >> cuac
+      Ahí_van_mis_datos.
+      }
+
+      myShell commad ->
+    #+END_SRC
+    Claro, para que siga creando el archivo necesario, podrías
+    verificar si el archivo existe, abriéndolo para
+    lectura. Reemplaza tus líneas 20-22 por:
+    #+BEGIN_SRC C
+      struct stat test;
+      if (stat("raiz", &test) != NULL) {
+	raiz = fopen("raiz","w");
+	fprintf(raiz, "Root del micro sistema\n");
+	fclose(raiz);
+      }
+    #+END_SRC
+  - El comando de listado no funciona ☹:
+    #+BEGIN_SRC text
+      myShell commad ->lsf
+      Root de MySis
+      No Valid Command
+    #+END_SRC
+    Revisando fuentes... Por alguna razón requiere que los archivos
+    lleven un ".msf" para detectarlos como tal. Ya que usas una noción
+    de /caracter de fin de bloque/ =}= seguido de una línea vacía,
+    podrías haber detectado este patrón para armar el
+    directorio. Además, como lo estás haciendo ahora, cualquier línea
+    de datos que incluya =.msf= será reportada como un archivo.
+  - Asumes que no habrá más de un archivo con el mismo nombre, pero no
+    lo verificas:
+    #+BEGIN_SRC text
+      myShell commad ->newfil
+      args[name] >>cuac
+      >> cuac
+      asdf
+
+      myShell commad ->newfil
+      args[name] >>cuac
+      >> cuac
+      huh?
+
+      myShell commad ->newfil
+      args[name] >>cuac
+      >> cuac
+      Asdf_Asdf
+
+      myShell commad ->readf cuac
+      args[name] >>>> cuac
+      asdf
+      }
+      huh?
+      }
+      Asdf_Asdf
+      }
+    #+END_SRC
+  - A pesar de los puntos anteriores, te marco 7.5 (en vez de 5) en el
+    rubro de /Cumplimiento/, por ser una de las entregas que mejor se
+    aproximó a lo solicitado.
+  - Tu entrega en Git... Bueno, encontraste una manera de trucar a
+    mi esquema de calificación: Agregaste a cada archivo en un commit,
+    en el transcurso de cinco minutos.
+
+    Técnicamente te da para 7.5 en el rubro, pero en la práctca, no
+    estás obteniendo ningún beneficio de Git. No lo estás utilizando
+    para documentar el progreso sobre del desarrollo de tu
+    proyecto. Lo cual... Es triste ☹
+    - Además, no manejas =.gitignore=
 
 | *Rubro*                | *Parcial* | *Peso* | *Puntos* |
 |------------------------+-----------+--------+----------|
-| *Requisitos*           |           |    0.2 |       0. |
-| Cumplimiento           |           |        |     0.00 |
+| *Requisitos*           |           |    0.2 |      1.5 |
+| Cumplimiento           |       7.5 |        |     1.50 |
 |------------------------+-----------+--------+----------|
-| *Proyecto*             |           |    0.2 |       0. |
-| Complejidad            |           |        |     0.00 |
-| Claridad desarrollo    |           |        |     0.00 |
-| Interfaz usuario       |           |        |     0.00 |
+| *Proyecto*             |           |    0.2 |     1.33 |
+| Complejidad            |         5 |        |     0.33 |
+| Claridad desarrollo    |        10 |        |     0.67 |
+| Interfaz usuario       |         5 |        |     0.33 |
 |------------------------+-----------+--------+----------|
-| *Documentación*        |           |    0.2 |       0. |
-| Doc. externa           |           |        |     0.00 |
-| Entorno y dependencias |           |        |     0.00 |
-| Comentarios            |           |        |     0.00 |
+| *Documentación*        |           |    0.2 |     2.01 |
+| Doc. externa           |        10 |        |     0.67 |
+| Entorno y dependencias |        10 |        |     0.67 |
+| Comentarios            |        10 |        |     0.67 |
 |------------------------+-----------+--------+----------|
-| *Entrega*              |           |    0.2 |       0. |
-| Historia en Git        |           |        |     0.00 |
-| Dir. de proyecto       |           |        |     0.00 |
-| Código válido          |           |        |     0.00 |
+| *Entrega*              |           |    0.2 |     1.67 |
+| Historia en Git        |       7.5 |        |     0.50 |
+| Dir. de proyecto       |       7.5 |        |     0.50 |
+| Código válido          |        10 |        |     0.67 |
 |------------------------+-----------+--------+----------|
-| *Legibilidad*          |           |    0.2 |       0. |
-| Estructura             |           |        |     0.00 |
-| Nomenclatura           |           |        |     0.00 |
+| *Legibilidad*          |           |    0.2 |      1.5 |
+| Estructura             |        10 |        |     1.00 |
+| Nomenclatura           |       7.5 |        |     0.50 |
 |------------------------+-----------+--------+----------|
-| *TOTAL*                |           |        |       0. |
+| *TOTAL*                |           |        |     8.01 |
 |------------------------+-----------+--------+----------|
 #+TBLFM: @2$4=@3::@3$4=@3$2*@2$3 ; f-2::@4$4=@5+@6+@7::@5$4=$2*@4$3/3 ; f-2::@6$4=$2*@4$3/3 ; f-2::@7$4=$2*@4$3/3 ; f-2::@8$4=@9+@10+@11::@9$4=$2*@8$3/3 ; f-2::@10$4=$2*@8$3/3 ; f-2::@11$4=$2*@8$3/3 ; f-2::@12$4=@13+@14+@15::@13$4=$2*@12$3/3 ; f-2::@14$4=$2*@12$3/3 ; f-2::@15$4=$2*@12$3/3 ; f-2::@16$4=@17+@18::@17$4=$2*@16$3/2 ; f-2::@18$4=$2*@16$3/3 ; f-2::@19$4=@2+@4+@8+@12+@16
