--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -8,9 +8,10 @@ La evaluación de las exposiciones sigue los criterios descritos en las
 al grupo)
 
 
-|-------+-------------------------------------------+----------------+-----------------------------------+--------------------------------|
-| Fecha | Tema                                      | Integrantes    | Documentos                        | Evaluación                     |
-|-------+-------------------------------------------+----------------+-----------------------------------+--------------------------------|
-| 3/oct | Rootkits: Escondiéndose del administrador | Eduardo Valdez | [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_diapositivas.pdf][Presentación (PDF)]], [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_reporte.pdf][Reporte (PDF)]] | [[./ValdezEduardo/evaluacion.org]] |
-|-------+-------------------------------------------+----------------+-----------------------------------+--------------------------------|
+|--------+-------------------------------------------+-----------------+-----------------------------------+--------------------------------|
+| Fecha  | Tema                                      | Integrantes     | Documentos                        | Evaluación                     |
+|--------+-------------------------------------------+-----------------+-----------------------------------+--------------------------------|
+| 3/oct  | Rootkits: Escondiéndose del administrador | Eduardo Valdez  | [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_diapositivas.pdf][Presentación (PDF)]], [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_reporte.pdf][Reporte (PDF)]] | [[./ValdezEduardo/evaluacion.org]] |
+| 24/oct | Cargado y ligado                          | Héctor Martínez |                                   |                                |
+|--------+-------------------------------------------+-----------------+-----------------------------------+--------------------------------|
 
