Corrijo evaluación de la exposición tras la entrega de material faltante

--- a/exposiciones/MartinezHector/evaluacion.org
+++ b/exposiciones/MartinezHector/evaluacion.org
@@ -2,7 +2,7 @@
 #+author: Gunnar Wolf
 
 - Tema presentado por :: Héctor Martínez
-- Calificación global :: (6.59 × 0.3) + (6.625 × 0.7) = *6.61*
+- Calificación global :: (6.59 × 0.3) + (8.625 × 0.7) = *8.01*
 
 * Evaluación grupal
 |--------------+------------+----------+-----------+-------|
@@ -27,11 +27,11 @@
 * Evaluación del docente
 
 - Originalidad del tema :: Bueno (7.5)
-- Material desarrollado :: Suficiente (5)
+- Material desarrollado :: Suficiente (10)
 - Contenido :: Excelente (10)
-- Fuentes bibliográficas :: Insuficiente (0)
+- Fuentes bibliográficas :: Excelente (10)
 - Uso del tiempo :: Excelente (10)
 - Dominio del tema :: Bueno (7.5)
 - Presencia :: Suficiente (5)
-- Global :: 7.5×0.1 + 5×0.2 + 10×0.2 + 0×0.1 + 10×0.1 + 7.5×0.15 +
-            5×0.15 = *6.625*
+- Global :: 7.5×0.1 + 10×0.2 + 10×0.2 + 10×0.1 + 10×0.1 + 7.5×0.15 +
+            5×0.15 = *8.625*
