--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -8,11 +8,11 @@ La evaluación de las exposiciones sigue los criterios descritos en las
 al grupo)
 
 
-|--------+-------------------------------------------+----------------------------------+-----------------------------------+-------------------------------------------------|
-| Fecha  | Tema                                      | Integrantes                      | Documentos                        | Evaluación                                      |
-|--------+-------------------------------------------+----------------------------------+-----------------------------------+-------------------------------------------------|
-| 3/oct  | Rootkits: Escondiéndose del administrador | Eduardo Valdez                   | [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_diapositivas.pdf][Presentación (PDF)]], [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_reporte.pdf][Reporte (PDF)]] | [[./ValdezEduardo/evaluacion.org]]                  |
-| 24/oct | Cargado y ligado                          | Héctor Martínez                  | [[./MartinezHector/CArgado_Ligado.pdf][Presentación (PDF)]]                | [[./MartinezHector/evaluacion.org]]                 |
-| 2/nov  | Git como sistema de archivos              | Ricardo Santiago y Aníbal Medina | No entregados                     | [[./MedinaAnibal_y_SantiagoRicardo/evaluacion.org]] |
-|--------+-------------------------------------------+----------------------------------+-----------------------------------+-------------------------------------------------|
+|--------+-------------------------------------------+----------------------------------+-----------------------------------+---------------------------------------------------|
+| Fecha  | Tema                                      | Integrantes                      | Documentos                        | Evaluación                                        |
+|--------+-------------------------------------------+----------------------------------+-----------------------------------+---------------------------------------------------|
+| 3/oct  | Rootkits: Escondiéndose del administrador | Eduardo Valdez                   | [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_diapositivas.pdf][Presentación (PDF)]], [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_reporte.pdf][Reporte (PDF)]] | [[./ValdezEduardo/evaluacion.org]]                    |
+| 24/oct | Cargado y ligado                          | Héctor Martínez                  | [[./MartinezHector/CArgado_Ligado.pdf][Presentación (PDF)]]                | [[./MartinezHector/evaluacion.org]]                   |
+| 2/nov  | GitHub como un mini sistema de archivos   | Ricardo Santiago y Aníbal Medina | [[MedinaM.Anibal_SantiagoL.Ricardo/GitHub.pptx][Presentación (Powerpoint)]]         | [[./MedinaM.Anibal_SantiagoL.Ricardo/evaluacion.org]] |
+|--------+-------------------------------------------+----------------------------------+-----------------------------------+---------------------------------------------------|
 
