--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -14,5 +14,8 @@ al grupo)
 | 3/oct  | Rootkits: Escondiéndose del administrador | Eduardo Valdez                   | [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_diapositivas.pdf][Presentación (PDF)]], [[./ValdezEduardo/Rootkits_escondiéndose_del_administrador/Rootkits_reporte.pdf][Reporte (PDF)]] | [[./ValdezEduardo/evaluacion.org]]                    |
 | 24/oct | Cargado y ligado                          | Héctor Martínez                  | [[./MartinezHector/CArgado_Ligado.pdf][Presentación (PDF)]]                | [[./MartinezHector/evaluacion.org]]                   |
 | 2/nov  | GitHub como un mini sistema de archivos   | Ricardo Santiago y Aníbal Medina | [[MedinaM.Anibal_SantiagoL.Ricardo/GitHub.pptx][Presentación (Powerpoint)]]         | [[./MedinaM.Anibal_SantiagoL.Ricardo/evaluacion.org]] |
+| 16/nov | Dekker                                    | Ferrusca, Ricardo Hernández      |                                   |                                                   |
+| 23/nov | Sistemas de inicio Unix                   | Edgar Saldaña                    |                                   |                                                   |
 |--------+-------------------------------------------+----------------------------------+-----------------------------------+---------------------------------------------------|
+
 
