Documento de señales en Unix

--- a/referencias/5.administracion_de_procesos.md
+++ b/referencias/5.administracion_de_procesos.md
@@ -22,3 +22,8 @@
   que aborda al
   [artículo homónimo](https://arxiv.org/pdf/1701.07615.pdf) publicado
   en febrero pasado. 
+- Para abordar el tema de comunicación entre procesos presentamos el
+  [Manejo de señales en Unix](./senales.pdf), fuertemente basado en el
+  [texto del mismo título](http://dcc.fceia.unr.ar:81/svn/lcc/R-412/Public/apuntes)
+  de mi amigo y coautor del libro Esteban Ruiz, de la Universidad
+  Nacional de Rosario (Argentina).
